services/products/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: products
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
  selector:
    app: products
