services/products/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-ratelimit
  namespace: traefik
spec:
  rateLimit:
    average: 100
    burst: 200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  namespace: products-ingress
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-test-ratelimit@kubernetescrd
  labels:
    name: products-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/products"
            backend:
              service:
                name: products-service
                port:
                  number: 8000
